// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`score 회귀 방지 — 페르소나별 BlockReason 분포 snapshot > 페르소나 p2 (30대 서울 직장인 신혼) — fixture 18개 분포 1`] = `
{
  "blocked": {
    "below_min_score": 3,
    "business_mismatch": 0,
    "cohort_mismatch": 9,
    "household_gate": 2,
    "income_gate": 0,
    "no_signal": 0,
    "regional_gate": 4,
    "shown": 0,
  },
  "personaId": "p2",
  "personaLabel": "30대 서울 직장인 신혼",
  "scoreDistribution": [
    {
      "bucket": "0",
      "count": 15,
    },
    {
      "bucket": "1-3",
      "count": 0,
    },
    {
      "bucket": "4-7",
      "count": 3,
    },
    {
      "bucket": "8+",
      "count": 0,
    },
  ],
  "shown": 0,
  "total": 18,
}
`;

exports[`score 회귀 방지 — 페르소나별 BlockReason 분포 snapshot > 페르소나 p3 (60대 부산 농어민 자녀동반) — fixture 18개 분포 1`] = `
{
  "blocked": {
    "below_min_score": 8,
    "business_mismatch": 0,
    "cohort_mismatch": 6,
    "household_gate": 0,
    "income_gate": 0,
    "no_signal": 0,
    "regional_gate": 4,
    "shown": 0,
  },
  "personaId": "p3",
  "personaLabel": "60대 부산 농어민 자녀동반",
  "scoreDistribution": [
    {
      "bucket": "0",
      "count": 10,
    },
    {
      "bucket": "1-3",
      "count": 0,
    },
    {
      "bucket": "4-7",
      "count": 8,
    },
    {
      "bucket": "8+",
      "count": 0,
    },
  ],
  "shown": 0,
  "total": 18,
}
`;

exports[`score 회귀 방지 — 페르소나별 BlockReason 분포 snapshot > 페르소나 p4 (20대 서울 대학생 single) — fixture 18개 분포 1`] = `
{
  "blocked": {
    "below_min_score": 1,
    "business_mismatch": 0,
    "cohort_mismatch": 8,
    "household_gate": 2,
    "income_gate": 0,
    "no_signal": 0,
    "regional_gate": 4,
    "shown": 0,
  },
  "personaId": "p4",
  "personaLabel": "20대 서울 대학생 single",
  "scoreDistribution": [
    {
      "bucket": "0",
      "count": 14,
    },
    {
      "bucket": "1-3",
      "count": 0,
    },
    {
      "bucket": "4-7",
      "count": 1,
    },
    {
      "bucket": "8+",
      "count": 3,
    },
  ],
  "shown": 3,
  "total": 18,
}
`;

exports[`score 회귀 방지 — 페르소나별 BlockReason 분포 snapshot > 페르소나 p5 (40대 경기 한부모 다자녀) — fixture 18개 분포 1`] = `
{
  "blocked": {
    "below_min_score": 2,
    "business_mismatch": 0,
    "cohort_mismatch": 6,
    "household_gate": 0,
    "income_gate": 0,
    "no_signal": 0,
    "regional_gate": 4,
    "shown": 0,
  },
  "personaId": "p5",
  "personaLabel": "40대 경기 한부모 다자녀",
  "scoreDistribution": [
    {
      "bucket": "0",
      "count": 10,
    },
    {
      "bucket": "1-3",
      "count": 0,
    },
    {
      "bucket": "4-7",
      "count": 2,
    },
    {
      "bucket": "8+",
      "count": 6,
    },
  ],
  "shown": 6,
  "total": 18,
}
`;

exports[`score 회귀 방지 — 페르소나별 BlockReason 분포 snapshot > 페르소나 p6 (50대 충남 장애가구 보훈) — fixture 18개 분포 1`] = `
{
  "blocked": {
    "below_min_score": 2,
    "business_mismatch": 0,
    "cohort_mismatch": 7,
    "household_gate": 2,
    "income_gate": 0,
    "no_signal": 0,
    "regional_gate": 4,
    "shown": 0,
  },
  "personaId": "p6",
  "personaLabel": "50대 충남 장애가구 보훈",
  "scoreDistribution": [
    {
      "bucket": "0",
      "count": 13,
    },
    {
      "bucket": "1-3",
      "count": 0,
    },
    {
      "bucket": "4-7",
      "count": 2,
    },
    {
      "bucket": "8+",
      "count": 3,
    },
  ],
  "shown": 3,
  "total": 18,
}
`;
